2008-06-13  Tatsuhiro Tsujikawa  <tatsuhiro.t at gmail dot com>

	Release 0.0.2